Copy edit's to Mahesh bid

--- a/Tataatsu-Idealabs.html
+++ b/Tataatsu-Idealabs.html
@@ -58,7 +58,7 @@
 		</section>
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Option I: Basic Design On-Ramp</h1>
+				<h1>Option I - Convey the vision: Product & Brand Definition</h1>
 			</div>
 			<div class="fL">
 				<h3>$2,999</h3>
@@ -68,20 +68,21 @@
 			<p>PURPOSE</p>
 			<ul>
 				<li>Create Sanga brand & identity</li>
-				<li>Establish onboarding strategy</li>
+				<li>Deep Dive into UI/UX of Tataatsu to determine crossroads of company's goals & users needs for MVP</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 last fL cf">
 			<p>DELIVERABLES</p>
 			<ul class="deliverables">
 				<li>Logo</li>
-				<li>Branding guide</li>
+				<li>Brand strategy guide</li>
+				<li>Visual brand guide</li>
 				<li>Onboarding strategy document</li>
 			</ul>
 		</div>
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Option II: Full Design Launch</h1>
+				<h1>Option II - Create the experience: Comprehensive UI/UX Design for MVP</h1>
 			</div>
 			<div class="fL">
 				<h3>$7,999</h3>
@@ -89,23 +90,24 @@
 		</div>
 		<div class="bullets span-2 fL cf">
 			<p>PURPOSE</p>
-			<ul>
-				<li>Create information architecture</li>
-				<li>Establish in-app ui/ux tap-flows</li>				
-				<li>Create design > developer diagrams</li>
+			<ul>		
+				<li>Design complete UI for app through exhaustive wirefirmes for all views & interactions in app</li>
+				<li>Work closely with business stakeholders to ensure UI/UX meets goals of business</li>
+				<li>Work closely with developers to ensure UI/UX fits within technical requirements & limitations</li>
+				<li>Garner feedback from potential users to ensure UI/UX meets needs of user</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 last fL cf">
 			<p>DELIVERABLES</p>
 			<ul class="deliverables">
 				<li>Information architecture guide</li>
-				<li>PDF of Wireframes</li>
-				<li>Full PDF of tap-flow diagrams</li>
+				<li>PDF of tap-flow diagrams</li>
+				<li>Full PDF of wireframes</li>
 			</ul>
 		</div>
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Option III: The Design Works</h1>
+				<h1>Option III - Bring the app to life: Comprehensive Visual Design for MVP</h1>
 			</div>
 			<div class="fL">
 				<h3>$13,999</h3>
@@ -114,13 +116,13 @@
 		<div class="bullets span-2 fL cf">
 			<p>PURPOSE</p>
 			<ul>
-				<li>Completely steamlining design > development</li>
+				<li>Create the look & feel of the app(the skin) that finalizes the user experience by bringing the visual branding into alignment with the functionality created in the wireframing process</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 last fL cf">
 			<p>DELIVERABLES</p>
 			<ul class="deliverables">
-				<li>Full PSD's of each page in the app with detailed annotations</li>
+				<li>Full PSD's of rich visual design for each page in the app with detailed annotations</li>
 				<li>Assets cut with file key for easy file placement in the code</li>
 			</ul>
 		</div>
