updates to Mahesh's bid

--- a/Tataatsu-Idealabs.html
+++ b/Tataatsu-Idealabs.html
@@ -59,9 +59,9 @@
 		<div class="banner span-4 last">
 			<div class="fL">
 				<h1>Option I - Convey the vision: Product & Brand Definition</h1>
-			</div>
-			<div class="fL">
-				<h3>$2,999</h3>
+			</div><br><br>
+			<div class="fR">
+				<h3>$2,999 ::: Rs152,908</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -82,10 +82,10 @@
 		</div>
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Option II - Create the experience: Comprehensive UI/UX Design for MVP</h1>
+				<h1>Option II - Create the experience: Comprehensive UI/UX Design for MVP</h1><br>
 			</div>
-			<div class="fL">
-				<h3>$7,999</h3>
+			<div class="fR">
+				<h3>$7,999 ::: Rs407,843</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -107,16 +107,16 @@
 		</div>
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Option III - Bring the app to life: Comprehensive Visual Design for MVP</h1>
+				<h1>Option III - Bring the app to life: Comprehensive Visual Design for MVP</h1><br>
 			</div>
-			<div class="fL">
-				<h3>$13,999</h3>
+			<div class="fR">
+				<h3>$13,999 ::: Rs713,737</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
 			<p>PURPOSE</p>
 			<ul>
-				<li>Create the look & feel of the app(the skin) that finalizes the user experience by bringing the visual branding into alignment with the functionality created in the wireframing process</li>
+				<li>Create the look & feel of the app (the skin) that finalizes the user experience by bringing the visual branding into alignment with the functionality created in the wireframing process</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 last fL cf">
@@ -134,6 +134,7 @@
 		</div>
 		<section class="description fL cf">
 			<p>This project will be worked on by a fleetCreature team with Jesse Seavers as Project Manager. Please <a href="mailto:jesse@fleetcreature.com">email Jesse</a> with any questions about this scope of work. Thank you for your interest in hiring fleetCreature.</p>
+			<p>We ask for a 30% downpayment to get started. If you would like to start with options I or II with the notion to later upgrade to option II or III we can accomodate that as well.</p>
 		</section>
 	</div>
 </body>
