Latest code, deep dive, report card

--- a/deep_dive.html
+++ b/deep_dive.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html">
 <html>
 <head>
 
-<meta name="description" content="I am a UI Designer and all around problem solver.">
+<meta name="description" content="We are UI/UX Designers and all around problem solvers.">
 <meta name="keywords" content="UI, Boulder, Technology, Apps, Design, Web Development, Front End, Information Architecture, iPhone Design, Entrepreneur">
 <meta charset="UTF-8">
 <meta name="copyright" content="2012">
-<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 
 <title>fleetCreature | app design and UI / UX by Alyssa Reese in Boulder, Colorado</title>
 	
@@ -46,22 +45,22 @@
 	<div class="container cf">
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h2>Tataatsu Idealabs</h2>
+				<h2>A Product deep dive</h2>
 			</div>
 			<div class="fL">
-				<h4>iPad app design</h4>
+				<h4>with fleetCreature</h4>
 			</div>
 		</div>
 		<section class="description fL cf">
 			<p>Tataatsu Idealabs is an early stage startup passionate about tools that help people connect dots. We think at the intersection of three broad areas i) Content ii) People iii) Tools. We believe that emphasizing a single area leads to less optimal solutions. The Sanga app aims to catalyze collaboration between people.</p>
-			<p>This bid covers 3 price models for the Sanga iPad app design. Please note that Option II includes the features of Option I and Option III includes OptionsI & II.</p>
+			<p>This bid covers 2 price models for the Deep Dive. Please note that '2 Day Deep Dive' includes the features of '1 Day Dive'.</p>
 		</section>
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Option I - Convey the vision: Product & Brand Definition</h1>
-			</div><br><br>
+				<h1>1 Day dive - define the vision: Product & Brand Exploration</h1>
+			</div>
 			<div class="fR">
-				<h3>$2,999 ::: Rs152,908</h3>
+				<h3>$999</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -82,10 +81,10 @@
 		</div>
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Option II - Create the experience: Comprehensive UI/UX Design for MVP</h1><br>
+				<h1>2 Day dive - preprare for launch: Minimum viable product workshop</h1>
 			</div>
 			<div class="fR">
-				<h3>$7,999 ::: Rs407,843</h3>
+				<h3>$1,999</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -105,28 +104,6 @@
 				<li>Full PDF of wireframes</li>
 			</ul>
 		</div>
-		<div class="banner span-4 last">
-			<div class="fL">
-				<h1>Option III - Bring the app to life: Comprehensive Visual Design for MVP</h1><br>
-			</div>
-			<div class="fR">
-				<h3>$13,999 ::: Rs713,737</h3>
-			</div>
-		</div>
-		<div class="bullets span-2 fL cf">
-			<p>PURPOSE</p>
-			<ul>
-				<li>Create the look & feel of the app (the skin) that finalizes the user experience by bringing the visual branding into alignment with the functionality created in the wireframing process</li>
-			</ul>
-		</div>
-		<div class="bullets span-2 last fL cf">
-			<p>DELIVERABLES</p>
-			<ul class="deliverables">
-				<li>Full PSD's of rich visual design for each page in the app with detailed annotations</li>
-				<li>Assets cut with file key for easy file placement in the code</li>
-			</ul>
-		</div>
-		
 		<div class="banner span-4 last">
 			<div class="fL">
 				<h1>Notes</h1>
