--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+<!DOCTYPE html">
 <html>
 <head>
 
-<meta name="description" content="I am a UI Designer and all around problem solver.">
+<meta name="description" content="We are UI/UX Designers and all around problem solvers.">
 <meta name="keywords" content="UI, Boulder, Technology, Apps, Design, Web Development, Front End, Information Architecture, iPhone Design, Entrepreneur">
 <meta charset="UTF-8">
 <meta name="copyright" content="2011">
