--- a/deep_dive.html
+++ b/deep_dive.html
@@ -52,7 +52,9 @@
 			</div>
 		</div>
 		<section class="description fL cf">
-			<p>Tataatsu Idealabs is an early stage startup passionate about tools that help people connect dots. We think at the intersection of three broad areas i) Content ii) People iii) Tools. We believe that emphasizing a single area leads to less optimal solutions. The Sanga app aims to catalyze collaboration between people.</p>
+			<p><span class = "darkText">WHO</span> You are innovators with an idea, passion & some initial funding. You are ready to take the next step and establish a strong foundation from which you can move forward to a successful product.</p>
+			<p><span class = "darkText">WHAT</span> A comprehensive exploration of your product from Business to Users to Branding to UI/UX to Platforms and beyond with fleetCreature's team of experts that has worked with dozens of Tech Startups and has exhaustive experience with what works, what doesn't & where to draw the lines.</p>
+			<p><span class = "darkText">WHY</span> Why Deep Dive? Bottom line, to save money. Tech products are expensive, averaging anywhere from 50K to several million dollars. Without a well planned & thought out foundation created with a team of people experienced in making tech products, a business can easily waste thousands & thousands of dollars going down the wrong path or worse, never end up with a product that achieves their goals. The Deep Dive helps insure that you don't build your fortress on the sand.</p>
 			<p>This bid covers 2 price models for the Deep Dive. Please note that '2 Day Deep Dive' includes the features of '1 Day Dive'.</p>
 		</section>
 		<div class="banner span-4 last">
@@ -64,19 +66,47 @@
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
-			<p>PURPOSE</p>
+			<p>QUESTIONS</p>
 			<ul>
-				<li>Create Sanga brand & identity</li>
-				<li>Deep Dive into UI/UX of Tataatsu to determine crossroads of company's goals & users needs for MVP</li>
+				<li>What are your core values?</li>
+				<li>Why are you making this product/ what do you hope to achieve with this product?</li>
+				<li>What exactly is the product?</li>
+				<li>Who are your target users and/or clients?</li>
+				<li>What characterizes your target users and/or clients?</li>
+				<li>What is the size of the target market (both clients & users)</li>
+				<li>What problem are you solving for your clients?</li>
+				<li>What are you offering that is novel to this niche?</li>
+				<li>Who is your main competition?</li>
+				<li>What makes your product more desireable to users/clients than you main competition?</li>
+				<li>What is you plan for long term devlopment of the app?</li>
+				<li>How will you execute this plan?</li>
+				<li>What is your profit model/models?</li>
+				<li>What kind of funding are you looking to procure in the future & when?</li>
+				<li>What are the emotions that will be associated with your brand?</li>
+				<li>What technological trends will your product take advantage of/ leverage?</li>
 			</ul>
 		</div>
-		<div class="bullets span-2 last fL cf">
-			<p>DELIVERABLES</p>
+		<div class="bullets span-2 last fR cf">
+			<p>FORMAT</p>
 			<ul class="deliverables">
-				<li>Logo</li>
-				<li>Brand strategy guide</li>
-				<li>Visual brand guide</li>
-				<li>Onboarding strategy document</li>
+				<li>4 hours</li>
+				<li>Lunch included</li>
+				<li>Conference room with ample whiteboard space</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 last fR cf">
+			<p>fleetCREATURE SPECIALISTS</p>
+			<ul class="deliverables">
+				<li>UI/UX Expert</li>
+				<li>Brand Strategist</li>
+				<li>Project Manager</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 last fR cf">
+			<p>OUTPUT</p>
+			<ul class="deliverables">
+				<li>Extensive documentation of conclusions reached</li>
+				<li>Beautifully designed Product Strategy PDF</li>
 			</ul>
 		</div>
 		<div class="banner span-4 last">
@@ -87,21 +117,59 @@
 				<h3>$1,999</h3>
 			</div>
 		</div>
+		<div class = "right-column-proposals">
+			<div class="bullets span-2 last fR cf">
+				<p>FORMAT</p>
+				<ul class="deliverables">
+					<li>4 hours</li>
+					<li>Lunch included</li>
+					<li>Conference room with ample whiteboard space</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 last fR cf">
+				<p>fleetCREATURE SPECIALISTS</p>
+				<ul class="deliverables">
+					<li>UI/UX Expert</li>
+					<li>Brand Strategist</li>
+					<li>Project Manager</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 last fR cf">
+				<p>OUTPUT</p>
+				<ul class="deliverables">
+					<li>Extensive documentation of conclusions reached</li>
+					<li>Beautifully designed MVP Strategy PDF</li>
+					<li>Editable & Exhaustive User Story Documentation</li>
+					<li>PDF of Ideas & Sketches Generated in Wireframing Session</li>
+				</ul>
+			</div>
+		</div>
 		<div class="bullets span-2 fL cf">
-			<p>PURPOSE</p>
+			<p>PLAN FOR MVP</p>
 			<ul>		
-				<li>Design complete UI for app through exhaustive wirefirmes for all views & interactions in app</li>
-				<li>Work closely with business stakeholders to ensure UI/UX meets goals of business</li>
-				<li>Work closely with developers to ensure UI/UX fits within technical requirements & limitations</li>
-				<li>Garner feedback from potential users to ensure UI/UX meets needs of user</li>
+				<li>What is the budget for MVP?</li>
+				<li>Who are the MVP users/clients?</li>
+				<li>How will these users/clients be found?</li>
+				<li>What is the launch strategy for MVP?</li>
+				<li>What resources need to be procured with this budget?</li>
+				<li>What is the timeline?</li>
+				<li>What platforms & technologies will be used for MVP?</li>
+				<li>How well will these technologies scale?</li>
 			</ul>
 		</div>
-		<div class="bullets span-2 last fL cf">
-			<p>DELIVERABLES</p>
-			<ul class="deliverables">
-				<li>Information architecture guide</li>
-				<li>PDF of tap-flow diagrams</li>
-				<li>Full PDF of wireframes</li>
+		<div class="bullets span-2 fL cf">
+			<p>CREATE USER STORIES</p>
+			<ul class = "no-bullet-list">
+				<li>User stories are widely used in tech development and provide a blueprint to effectively plan & manage design & programming for the MVP production phase.</li>		
+				<li>In this portion of the dive we will document all users stories & decide those which should go into MVP and those which should be put in the icebox for later based on timeline, budget & the target audience for MVP.</li>
+				<!--<li><a href = "">sample user stories</a></li>-->
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>WIREFRAMING EXCERCISE</p>
+			<ul class = "no-bullet-list">		
+				<li>During the final portion of the MVP workshop we will facilitate a wireframing exercise in which company stakeholders pair with fleetCreature experts to sketch out ideas for the main views of the app.</li>
+				<li>This part of the processes will combine all of the information generated in the Deep Dive & start the processes of moving the app from idea to physical product.</li>
 			</ul>
 		</div>
 		<div class="banner span-4 last">
@@ -110,8 +178,8 @@
 			</div>
 		</div>
 		<section class="description fL cf">
-			<p>This project will be worked on by a fleetCreature team with Jesse Seavers as Project Manager. Please <a href="mailto:jesse@fleetcreature.com">email Jesse</a> with any questions about this scope of work. Thank you for your interest in hiring fleetCreature.</p>
-			<p>We ask for a 30% downpayment to get started. If you would like to start with options I or II with the notion to later upgrade to option II or III we can accomodate that as well.</p>
+			<p>We ask for advanced payment for all Deep Dives. <a href="mailto:info@fleetcreature.com">Email us</a> with any questions or to schedule a Dive with fleetCreature. Please note that the 2 Day Deep Dive includes everything in the 1 Day Deep Dive.</p>
+			<p>We believe that a small group of dedicated people can solve big problems. We look forward to helping you down the the path of success!</p>
 		</section>
 	</div>
 </body>
