--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@ overflow:hidden;
                     <div class="sample jesse">
                     </div>
                     <p><span class="emphasis">Jesse Seavers</span></p>
-                    <p>Project Manager & VP of Products</p>
+                    <p>Project Manager & New Biz Dev</p>
                     <p><a href= "http://www.twitter.com/#!/jseav19" target = "blank">@jseav19</a></p>
                     <p><a href = "http://www.linkedin.com/in/jseav19" target = "blank">Linkedin</a></p>
                 </div>
@@ -1251,7 +1251,7 @@ overflow:hidden;
                     <div class="sample melanie">
                     </div>
                     <p><span class="emphasis">Melanie Gower</span></p>
-                    <p>UI/UX Apprentice</p>
+                    <p>Content Strategist</p>
                     <p><a href= "http://www.twitter.com/#!/GIRLvsCODE" target = "blank">@GIRLvsCODE</a></p>
                     <p><a href = "http://www.linkedin.com/in/melaniegower" target = "blank">Linkedin</a></p>
                 </div>
