Creekside Commons project overview

--- a/internal.html
+++ b/internal.html
@@ -70,7 +70,7 @@
 		<section class="description fL cf">
 			<p><span class = "darkText">TRANSPARENCY</span> No big secrets here. Only hard work & communication. We're all adults & deserve to be informed. We believe in transparency of finances & roles & thus all wages & work structure is public knowledge (just ask!)</p>
 			<p><span class = "darkText">OWNERSHIP</span> We want leaders, not sheep. People who want to take ownership and have real accountability. From your first day at fleetCreature you will start earning shares & after 1 year can begin taking part in shareholder profits & decision making.</p>
-			<p><span class = "darkText">AUTONOMOY</span> We are not a 9-5 company. We expect results but give you freedom in determining how you will make those results happen. We encourage you to take the lead, make decisions & solve probelms on your own. Leadership will not be frowned upon - ask forgiveness, not permission.</p>
+			<p><span class = "darkText">AUTONOMY</span> We are not a 9-5 company. We expect results but give you freedom in determining how you will make those results happen. We encourage you to take the lead, make decisions & solve probelms on your own. Leadership will not be frowned upon - ask forgiveness, not permission.</p>
 		</section>
 		<div class="banner span-4 last">
 			<div class="fL">
