--- a/pricing.html
+++ b/pricing.html
@@ -78,6 +78,29 @@
 				<li>psd's and png's of the variations on the logo</li>
 			</ul>
 		</div>
+
+		<div class="banner span-4 last">
+			<div class="fL">
+				<h1>Branding</h1>
+			</div>
+			<div class="fR">
+				<h3>$3,999 (with logo bundled: $4,999)</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>
+				<li>create the brand</li>
+				<li>communicate the soul of your product</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 last fL cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<lI>branding strategy document</lI>
+				<li>digital brand assets</li>
+			</ul>
+		</div>
 		
 		<div class="banner span-4 last">
 			<div class="fL">
