--- a/locationplay.html
+++ b/locationplay.html
@@ -46,26 +46,17 @@
 	<div class="container cf">
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h2>Learning to Learn</h2>
+				<h2>Let's meetup!</h2>
 			</div>
-			<div class="fR">
-				<h4>fC Manifesto</h4>
-			</div>
-		</div>
-		<section class="description not-pink fL cf">
-			<p>Welcome to the our playground,</p>
-			<p>The new world of design is not about a fixed & stagnant product that you make once & have on a hard drive somewhere to occasionally print out. It is about creating in a world that is alive, flexible & constantly changing. It is about leveraging the power of technology to make something that lives outside of our computers, that touches the lives of thousands or even millions. This is not written in Word or Pages (coffins for information). This manifesto is written in code & hosted in the cloud. Today, 1.4 billion people and counting could read these words if they looked in the right place. This is where information lives & grows. This is where everything is connected. This is where aspiring UI/UX designers need to learn to work & play & produce.</p> 
-			<p>When we hire new designers we look not at their proven UI/UX skills but at their creative potential & passion. The world of web & apps evolves so quickly that it's not about what you know, but how inspired you are to make learning a lifelong pursuit.</p>
-			<p>At fleetCreature, we have an intrinsic love of teaching people & need to help others achieve their potential. We love fleetCreature because we know we can bridge the lack of skilled UI/UX designers in the industry to the high number of people we meet who could become excellent web & app designers with only the right education & mentorship.</p>
-			<p>Our motto at fleetCreature is We Make Apps The Make Life Better. Technology can either make life simpler or give you more headaches & design has a huge impact on tipping that balance. fleetCreature is about designers who have the skills & confidence to solve problems & make life a little more beautiful for the thousands or even millions of people they will end up affecting with their designs.</p>
-			<p>Never stop making,</p>
-			<p>Alyssa Reese | Founder</p>
-		</section>
-		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>We believe a small group of people can solve big problems...</h1>
+				<h4>Step into our office... Earth.</h4>
 			</div>
 		</div>
-	</div>
+			<!-- Google Public Location Badge -->
+			<iframe src="http://www.google.com/latitude/apps/badge/api?user=-1584489032700101289&type=iframe&maptype=terrain" width="180" height="300" frameborder="0"></iframe>
+			<!-- To disable location sharing, you *must* visit https://www.google.com/latitude/apps/badge and disable the Google Public Location badge. Removing this code snippet is not enough! -->
+			<iframe src="http://www.google.com/latitude/apps/badge/api?user=6801304428734465749&type=iframe&maptype=terrain" width="180" height="300" frameborder="0"></iframe>
+			<!-- To disable location sharing, you *must* visit https://www.google.com/latitude/apps/badge and disable the Google Public Location badge. Removing this code snippet is not enough! -->
+		</div>
 </body>
 </html>
