--- a/pricing.html
+++ b/pricing.html
@@ -58,6 +58,36 @@
 
 		<div class="banner span-4 last">
 			<div class="fL">
+				<h1>Deep Dive</h1>
+			</div>
+			<div class="fL">
+				<h3><a href="http://www.fleetcreature.com/deep_dive.html">Read the full description</a></h3>
+			</div>
+			<div class="fR">
+				<h3>$1,999</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>		
+				<li>Ask the tough questions</li>
+				<li>Establish the Minimally Viable Product (MVP)</li>
+				<li>Create user-stories</li>
+				<li>Wire-framing sketch</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 last fL cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<li>Extensive documentation of conclusions</li>
+				<li>Designed Product Strategy PDF</li>
+				<li>User-story documentation</li>
+				<li>PDF of ideas & sketches generated in wireframing exercise</li>
+			</ul>
+		</div>
+
+		<div class="banner span-4 last">
+			<div class="fL">
 				<h1>Logo</h1>
 			</div>
 			<div class="fR">
@@ -67,7 +97,8 @@
 		<div class="bullets span-2 fL cf">
 			<p>PURPOSE</p>
 			<ul>		
-				<li>to create versatile logo</li>
+				<li>instant brand recognition</li>
+				<li>live long and prosper</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 last fL cf">
@@ -84,7 +115,7 @@
 				<h1>Branding</h1>
 			</div>
 			<div class="fR">
-				<h3>$3,999 (with logo bundled: $4,999)</h3>
+				<h3>$3,999</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -104,10 +135,36 @@
 		
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Visual Skins: Web-App*</h1>
+				<h1>Wire-Frames / Information Architecture</h1>
 			</div>
-			<div class="fR">
-				<h3>$4,999 (all of the above bundled: $7,499)</h3>
+			<div class="fR align-right">
+				<h3>sm: $4,999</h3>
+				<h3>m: $6,999</h3>
+				<h3>lg: $8,999</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>
+				<li>Layout the flow of your app</li>
+				<li>Lay the UI/UX foundation</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 last fL cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<li>psd's of wireframes & tapflows</li>
+			</ul>
+		</div>
+
+		<div class="banner span-4 last">
+			<div class="fL">
+				<h1>Visual Skins: Web-App</h1>
+			</div>
+			<div class="fR align-right">
+				<h3 class="align-right">sm: $4,999</h3>
+				<h3 class="align-right">m: $6,999</h3>
+				<h3 class="align-right">lg: $8,999</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -131,7 +188,7 @@
 				<h1>Visual Skins: Mobile-App*</h1>
 			</div>
 			<div class="fR">
-				<h3>$3,999 (all of the above bundled: $9,999)</h3>
+				<h3>$3,999</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -155,7 +212,7 @@
 				<h1>Visual Skins: Tablet-App*</h1>
 			</div>
 			<div class="fR">
-				<h3>$3,999 (all of the above bundled: $11,999)</h3>
+				<h3>$3,999</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -182,9 +239,9 @@
 		<section class="description fL cf">
 			<p>30% downpayment to get started</p>
 			<p>A legal contract stipulating our business relationship is signed at the beginning of each new project.</p>
-			<p>If your product already has branding assets, bundled rates bring a 50% discount the less expensive of each additional design element.</p>
+			<p>Buy one or more design element, and get a 50% discount on the lowest priced element.</p>
 			<p>*These prices are for the iOS versions only. To add Android versions add 50% to price line-item.</p>
-			<p>Each projects activates the talented fC team with Jesse Seavers as Project Manager. Please <a href="mailto:jesse@fleetcreature.com">email Jesse</a> if you'd like to discuss working with fleetCreature. Thank you for your interest in fleetCreature.</p>
+			<p>Each projects activates the talented fC team. Please email our <a href="mailto:sales@fleetcreature.com">Lead Coversions Department</a> if you'd like to discuss working with fleetCreature. Thank you for your interest in fleetCreature.</p>
 		</section>
 	</div>
 </body>
