--- a/locationplay.html
+++ b/locationplay.html
@@ -49,7 +49,7 @@
 				<h2>Let's meetup!</h2>
 			</div>
 			<div class="fL">
-				<h4>Step into our office... Earth.</h4>
+				<h4>Step into our office... Earth</h4>
 			</div>
 		</div>
 			<!-- Google Public Location Badge -->
