edits to Drink! Deep dive doc

--- a/deep-dive-Drink!.html
+++ b/deep-dive-Drink!.html
@@ -97,7 +97,7 @@
 			</div>
 		</div>
 		<section class="description not-pink fL cf">
-			<p>A platform in which patrons, owners, and vendors create rich profiles to connect around shared values and stories. Establishments are rated across a detailed list of factors, from machinery used to products available to ambience and service style. Coffee shop profiles are built along “storylines,” fields which serve as prompts for key story elements (e.g. founder’s story, trials and tribulations, vision). User profiles serve as a way to allow coffee lovers to claim their idiosyncratic preferences, express their loyalties (and rivalries), and search for new coffee shops anywhere in the world based on their detailed preferences. These functionalities will allow coffee lovers to go beyond the search and connect with coffee shops that fit their unique style, similar to online dating platforms.</p>
+			<p>A platform in which patrons, owners, and vendors create rich profiles to connect around shared values and stories. Establishments are rated across a detailed list of factors, from machinery used to products available to ambience and service style. Coffee shop profiles are built along “storylines,” fields which serve as prompts for key story elements (e.g. founder’s story, trials and tribulations, vision). user profiles serve as a way for coffee lovers to claim their idiosyncratic preferences, express their loyalties (and rivalries), and search for new coffee shops anywhere in the world based on their detailed preferences. These functionalities will allow coffee lovers to go beyond the search and connect with coffee shops that fit their unique style, similar to online dating platforms.</p>
 		</section>
 		<div class="bullets span-2 fL cf">
 			<p>KEY FEATURES</p>
@@ -127,7 +127,7 @@
 				</ul>
 		</div>
 		<div class="bullets span-4 fL cf">
-			<p>DIFFERENCIATING FACTORS</p>
+			<p>DIFFERENTIATING FACTORS</p>
 				<ul class="deliverables">
 					<li>Coffee-centric</li>
 					<li>A platform for guided storytelling</li>
@@ -157,7 +157,7 @@
 			</ul>
 		</div>
 		<div class="bullets span-2 fL cf">
-			<p>VLAUE OFFERED TO COFFEE LOVERS</p>
+			<p>VALUE OFFERED TO COFFEE LOVERS</p>
 				<ul class="deliverables">
 					<li>Express yourself fully; tell people about yourself</li>
 					<li>Discover something about yourself you didn’t already know</li>
