--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@ overflow:hidden;
                     <a href="http://facebook.com/fleetcreature" title="Like us on Facebook" target="_blank"><img src="images/owl_small.png" class="owl" width="200px" height="170px">like us</a><p>on facebook</p>
                 </div>
                 <div class="contact-image sample span-1 last">
-                    <a href="file://localhost/Users/jseav19/FleetCreature/fleetCreature/locationplay.html" title="The Node House" target="blank"><img src="images/rhino_small.png" width="220px" height="170px">find us</a><p>in the flesh</p>
+                    <a href="http://www.fleetcreature.com/locationplay.html" title="The Node House" target="blank"><img src="images/rhino_small.png" width="220px" height="170px">find us</a><p>in the flesh</p>
                 </div>
             </div>
         </section>
