--- a/deep-dive-Drink!.html
+++ b/deep-dive-Drink!.html
@@ -21,6 +21,8 @@
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/prefixfree.js"></script>
 <script type="text/javascript" src="js/modernizr-2.0.6.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/scroll.js"></script>
 
 <script type="text/javascript">
 
@@ -40,8 +42,21 @@
 <![endif]-->
 
 </head>
-<body class="proposal">
+<body class="proposal" id ="top">
     <a href="http://www.fleetcreature.com" class="home-link" target="blank"><img src="images/beetle_illustration2.png" width="250px"></a>
+    <div class="blogheader-container">
+            <div class="blogheader">            
+                <div class="categories">
+                    <ul>
+                        <li><a href="#why">why</a></li>
+                        <li><a href="#what">what</a></li>
+                        <li><a href="#who">who</a></li>
+                        <li><a href="#how">how</a></li>
+                        <li><a href="#top">return to top</a></li>
+                    </ul>
+                </div>
+            </div>            
+        </div>
 	<div class="container cf">
 		<div class="banner span-4 last" id="mainheading">
 			<div class="fL">
@@ -61,7 +76,7 @@
 			<p><span class="darkText">HOW</span> Self-funded, revenue-generating MVP driven by an imaginative team of believers.</p>
 			<p><span class="darkText">WHERE</span> Boulder County > Portland > U.S. > World</p>
 		</section>
-		<div class="banner span-4 last">
+		<div class="banner span-4 last" id="why">
 			<div class="fL">
 				<h1>Why</h1>
 			</div>
@@ -88,7 +103,7 @@
 				</ul>
 		</div>
 
-		<div class="banner span-4 last">
+		<div class="banner span-4 last" id="what">
 			<div class="fL">
 				<h1>What</h1>
 			</div>
@@ -136,7 +151,7 @@
 				<img src="images/rhino_reverse.png" id="rhino">
 		</div>
 
-		<div class="banner span-4 last">
+		<div class="banner span-4 last" id="who">
 			<div class="fL">
 				<h1>Who</h1>
 			</div>
@@ -168,7 +183,7 @@
 				</ul>
 		</div>
 
-		<div class="banner span-4 last">
+		<div class="banner span-4 last" id="how">
 			<div class="fL">
 				<h1>How</h1>
 			</div>
