fixed a typo on index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ overflow:hidden;
             </div>
             <div class="devices services cf">
                 <ul>
-                    <li class="fL span-1"><img src="images/icon-concieve.png"><h3><span class="emphasis">Concieve</span></h3>
+                    <li class="fL span-1"><img src="images/icon-concieve.png"><h3><span class="emphasis">Conceive</span></h3>
                         <ul class = "grey-block">
                             <li>Branding</li>
                             <li>UI/UX consulting</li>
