updated the name of Ryan's deep dive page

--- a/deep-dive-tresPlace.html
+++ b/deep-dive-tresPlace.html
@@ -60,14 +60,11 @@
 	<div class="container cf">
 		<div class="banner span-4 last" id="mainheading">
 			<div class="fL">
-				<h2>Drink!*</h2>
+				<h2>tresPlace</h2>
 			</div>
 			<div class="fR">
 				<h4>Deep Dive with fleetCreature</h4>
 			</div>
-		</div>
-		<div class="not-pink fL" id="footnote">
-			<p>*just a placeholder title to get the juices flowing</p>
 		</div>
 		<section class="description fL cf">
 			<p><span class="darkText">WHAT</span> A story-driven platform that connects coffee lovers with coffee shops.</p>
