Updates for pricing doc & deep dive

--- a/deep_dive.html
+++ b/deep_dive.html
@@ -1,4 +1,4 @@
-;l;;<!DOCTYPE html">
+<!DOCTYPE html">
 <html>
 <head>
 
@@ -62,7 +62,7 @@
 				<h1>1 Day dive - define the vision: Product & Brand Exploration</h1>
 			</div>
 			<div class="fR">
-				<h3>$999</h3>
+				<h3>$1499</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -114,7 +114,7 @@
 				<h1>2 Day dive - preprare for launch: Minimum viable product workshop</h1>
 			</div>
 			<div class="fR">
-				<h3>$1,999</h3>
+				<h3>$2999</h3>
 			</div>
 		</div>
 		<div class = "right-column-proposals">
