--- a/deepDive-tresPlace.html
+++ b/deepDive-tresPlace.html
@@ -10,6 +10,7 @@
 <title>fleetCreature | app design and UI / UX in Boulder, Colorado</title>
 	
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="css/print.css" type="text/css" media="print">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 <link rel="shortcut icon" href="http://www.fleetcreature.com/favicon.ico" type="image/ico" />
