--- a/internal.html
+++ b/internal.html
@@ -69,7 +69,7 @@
 		</div>
 		<section class="description fL cf">
 			<p><span class = "darkText">TRANSPARENCY</span> No big secrets here. Only hard work & communication. We're all adults & deserve to be informed. We believe in transparency of finances & roles & thus all wages & work structure is public knowledge (just ask!)</p>
-			<p><span class = "darkText">OWNERSHIP</span> We want leaders, not sheep. People who want to take ownership and have real accountability. From your first day at fleetCreature you will start earning shares & after 1 year can begin taking part in shareholder profits & decision making.</p>
+			<p><span class = "darkText">OWNERSHIP</span> We want leaders, not sheep. People who want to take ownership and have real accountability. From your first day as a retainered employee of fleetCreature you will start earning shares & after 1 year can begin taking part in shareholder profits & decision making.</p>
 			<p><span class = "darkText">AUTONOMY</span> We are not a 9-5 company. We expect results but give you freedom in determining how you will make those results happen. We encourage you to take the lead, make decisions & solve probelms on your own. Leadership will not be frowned upon - ask forgiveness, not permission.</p>
 		</section>
 		<div class="banner span-4 last">
@@ -91,7 +91,7 @@
 		<div class="bullets span-2 last fR cf">
 			<p>EARNING FORMAT</p>
 			<ul class="deliverables">
-				<li>40% of shares are fixed (owned permanently Alyssa)</li>
+				<li>40% of shares are fixed (owned permanently by Alyssa)</li>
 				<li>60% are flexible</li>
 				<li>100 flexible shares earned for each year worked</li>
 			</ul>
@@ -346,7 +346,7 @@
 				<h1>UI/UX Designer</h1>
 			</div>
 			<div class="fR">
-				<h3>Melanie Gower + Contractors</h3>
+				<h3>Melanie Gower + fleetLeague Contractors</h3>
 			</div>
 		</div>
 		<div class = "right-column-proposals">
@@ -396,6 +396,20 @@
 				<li>Keep project manager updated on progress</li>
 				<li>Check in with Creative director at beginning of project, midway & near end</li>
 				<li>Ask questions and bring in help as needed</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>COMPENSATION</p>
+			<ul>		
+				<li>Designers are compensated on a fixed, project basis</li>
+				<li>Designer compensation is 25% of project bid. Project bids are created based on the <a href = "pricing.html">fleetCreature pricing menu</a>.</li>
+				<li>Payment is made 40% up front & 60% upon completion of project to fleetCreature standards</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>CONTRACT</p>
+			<ul>		
+				<li>Designers are required to sign a <a href="">work contract</a>.</li>
 			</ul>
 		</div>
 		<div class="banner span-4 last" id="brand-strategist">
