--- a/pricing.html
+++ b/pricing.html
@@ -22,6 +22,8 @@
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/prefixfree.js"></script>
 <script type="text/javascript" src="js/modernizr-2.0.6.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/scroll.js"></script>
 
 <script type="text/javascript">
 
@@ -43,6 +45,24 @@
 </head>
 <body class="proposal">
     <a href="http://www.fleetcreature.com" class="home-link" target="blank"><img src="images/beetle_illustration2.png" width="250px"></a>
+
+    <div class="blogheader-container">
+        <div class="blogheader">            
+            <div class="categories">
+                <ul>
+                    <li><a href="#uidesign">App UI/UX</a></li>
+                    <li><a href="#appskin">App Skins</a></li>
+                    <li><a href="#webdesign">Web Design</a></li>
+                    <li><a href="#deepdive">Deep Dive</a></li>
+                    <li><a href="#branding">Branding</a></li>
+                    <li><a href="#retainers">Retainers</a></li>
+                    <li><a href="#rush">In a Rush?</a></li>
+                    <li><a href="#bid">Get Your Bid</a></li>
+                </ul>
+            </div>
+        </div>            
+    </div>
+
 	<div class="container cf">
 		<div class="banner span-4 last">
 			<div class="fL">
@@ -53,10 +73,151 @@
 			</div>
 		</div>
 		<section class="description fL cf">
-			<p>The elements of your company's identity are listed out hierarchically and are intented to build on one another. The logo is the cornerstone the rest of the product's visual identity is built upon it. Below are listed itemized prices for each of the elements in the product's overall brand as well as the bundled price rate if you are buiding your brand from the ground up.</p>
+			<p><span class = "darkText">$150</span> Our hourly rate.</p>
+			
+			<p><span class = "darkText">Give it to you straight</span> What we like to do.</p>
+			<p>Many design & dev companies do not publicize their rates. We believe in transparency and feel that our clients are cool enough to handle knowing some of the industry secrets.</p>
+			<p><span class = "darkText">SIMPLIFY & FIND THE ESSENTIAL</span> Our design theory.</p>
+			<p>We simplify the pricing of services to reduce your headaches & give you greater clarity on what your hard won money is buying. Please browse below or click on menu links at the bottom to find pricing on various design packages.</p>
 		</section>
 
+		<div class="banner span-4 last" id="uidesign">
+			<div class="fL">
+				<h1>UI/UX design for Web, Mobile, Tablet Apps</h1>
+			</div>
+			<div class="fR align-right">
+				<h3>sm app (< 10 pgs): $4999</h3>
+				<h3>m app (10 - 20 pgs): $6999</h3>
+				<h3>lg app (20+ pgs): $8999</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>
+				<li>Transform feature list into a UI design that is a joy to use & a vehicle for the desired experience & functionality or iterate on an existing product to improve UI/UX experience, introduce new features & remove pain points</li>
+				<li>Layout the flow of your app</li>
+				<li>Lay the UI/UX foundation</li>
+				<li>Create detailed documents that will act as guidelines for both visual design & frontend/backend development of the app</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 last fL cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<li>psd's of wireframes & tapflows</li>
+				<li>detailed documentation of UI functionality for every screen & view</li>
+			</ul>
+		</div>
+
+		<div class="banner span-4 last" id = "appskin">
+			<div class="fL">
+				<h1>Visual Skins: Web or Tablet App</h1>
+			</div>
+			<div class="fR align-right">
+				<h3>sm app (< 10 pgs): $4999</h3>
+				<h3>m app (10 - 20 pgs): $6999</h3>
+				<h3>lg app (20+ pgs): $8999</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 last fR cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<li>psd's of each page fully designed out on a clean grid</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>
+				<li>translate the brand to the app</li>
+				<li>add the skin to the skeleton of the wireframes</li>
+				<li>bring the product to life & create tone of UX</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>TASTY ADD ONS</p>
+			<ul class= "value-add">
+				<li>Cut all assets & provide detailed specs : $89 per page</li>
+				<li>Having us cut your assets is faster & cheaper than having devs do it & our detailed spec docs make them more efficient when coding</li>
+			</ul>
+			<ul class= "value-add">
+				<li>HTML & CSS for Web : $250 per page</li>
+				<li>Clean, browser compatible static code for your web app front end</li>
+			</ul>
+		</div>
+
 		<div class="banner span-4 last">
+			<div class="fL">
+				<h1>Visual Skins: Mobile App</h1>
+			</div>
+			<div class="fR align-right">
+				<h3>sm app (< 10 pgs): $3999</h3>
+				<h3>m app (10 - 20 pgs): $5999</h3>
+				<h3>lg app (20+ pgs): $7999</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 last fR cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<li>psd's of each page fully designed out on a clean grid</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>
+				<li>translate the brand to the app</li>
+				<li>add the skin to the skeleton of the wireframes</li>
+				<li>bring the product to life & create tone of UX</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>TASTY ADD ONS</p>
+			<ul class= "value-add">
+				<li>Cut all assets & provide detailed specs : $89 per page</li>
+				<li>Having us cut your assets is faster & cheaper than having devs do it & our detailed spec docs make them more efficient when coding</li>
+			</ul>
+		</div>
+
+		<div class="banner span-4 last" id="webdesign">
+			<div class="fL">
+				<h1>Traditional Web Design</h1>
+			</div>
+			<div class="fR align-right">
+				<h3>Homepage: $1200</h3>
+				<h3>Additional Pages: $500</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 last fR cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<li>psd's of each page fully designed out on a clean grid</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>
+				<li>Design for traditional informational & sales websites</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>TASTY ADD ONS</p>
+			<ul class= "value-add">
+				<li>Cut all assets & provide detailed specs : $89 per page</li>
+				<li>Having us cut your assets is faster & cheaper than having devs do it & our detailed spec docs make them more efficient when coding</li>
+			</ul>
+			<ul class= "value-add">
+				<li>HTML & CSS for Web : $250 per page</li>
+				<li>Clean, browser compatible static code for your web app front end</li>
+			</ul>
+			<ul class= "value-add">
+				<li>WordPress Integration : $500</li>
+				<li>Integrate your site with wordpress so that you can edit & update copy without the need for a web developer</li>
+			</ul>
+			<ul class= "value-add">
+				<li>Go Responsive : Design/Code: $250/$200 per page</li>
+				<li>Add responsive design/ code to your site so that it looks great on web, tablet & mobile devices!</li>
+			</ul>
+		</div>
+
+		<div class="banner span-4 last" id="deepdive">
 			<div class="fL">
 				<h1>Deep Dive</h1>
 			</div>
@@ -64,13 +225,14 @@
 				<h3><a href="http://www.fleetcreature.com/deep_dive.html">Read the full description</a></h3>
 			</div>
 			<div class="fR">
-				<h3>$1,999</h3>
+				<h3>$2999</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
 			<p>PURPOSE</p>
 			<ul>		
 				<li>Ask the tough questions</li>
+				<li>Define Brand & Product Strategy</li>
 				<li>Establish the Minimally Viable Product (MVP)</li>
 				<li>Create user-stories</li>
 				<li>Wire-framing sketch</li>
@@ -86,12 +248,37 @@
 			</ul>
 		</div>
 
-		<div class="banner span-4 last">
+		<div class="banner span-4 last" id="branding">
 			<div class="fL">
-				<h1>Logo</h1>
+				<h1>full Branding</h1>
 			</div>
 			<div class="fR">
-				<h3>$1,999</h3>
+				<h3>$3999</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>
+				<li>define & create the brand</li>
+				<li>communicate the soul of your product</li>
+				<li>create language you will use to talk about your product</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 last fL cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<lI>branding strategy document</lI>
+				<li>logo</li>
+				<li>visual brand guidelines</li>
+			</ul>
+		</div>
+
+		<div class="banner span-4 last">
+			<div class="fL">
+				<h1>Logo only</h1>
+			</div>
+			<div class="fR">
+				<h3>$1999</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -104,144 +291,98 @@
 		<div class="bullets span-2 last fL cf">
 			<p>DELIVERABLES</p>
 			<ul class="deliverables">
-				<li>solid logo</li>
-				<li>variations on the Logo</li>
-				<li>psd's and png's of the variations on the logo</li>
+				<li>solid, sexy logo</li>
+				<li>logo usage guidelines</li>
+				<li>ai file of logo</li>
+			</ul>
+		</div>
+
+		<div class="banner span-4 last" id="retainers">
+			<div class="fL">
+				<h1>Designer on Retainer</h1>
+			</div>
+			<div class="fR">
+				<h3>$1000/month per 10 hrs</h3>
+			</div>
+		</div>
+		<div class="bullets span-2 fL cf">
+			<p>PURPOSE</p>
+			<ul>
+				<li>It is often necessary for companies to have a long term relationship with a UI/UX designer but not necessary or economical to have a full time designer on staff</li>
+				<li>Have a designer on hand at all times that knows your product & can provide design support & consulting</li>
+				<li>Guarantee availability for a certain # of hours every month</li>
+			</ul>
+		</div>
+		<div class="bullets span-2 last fL cf">
+			<p>DELIVERABLES</p>
+			<ul class="deliverables">
+				<li>Dedicated designer available for all design needs for a set # of hours every month</li>
 			</ul>
 		</div>
 
 		<div class="banner span-4 last">
 			<div class="fL">
-				<h1>Branding</h1>
-			</div>
-			<div class="fR">
-				<h3>$3,999</h3>
-			</div>
-		</div>
-		<div class="bullets span-2 fL cf">
-			<p>PURPOSE</p>
-			<ul>
-				<li>create the brand</li>
-				<li>communicate the soul of your product</li>
-			</ul>
-		</div>
-		<div class="bullets span-2 last fL cf">
-			<p>DELIVERABLES</p>
-			<ul class="deliverables">
-				<lI>branding strategy document</lI>
-				<li>digital brand assets</li>
-			</ul>
-		</div>
-		
-		<div class="banner span-4 last">
-			<div class="fL">
-				<h1>Wire-Frames / Information Architecture</h1>
+				<h1>Sample Bid</h1>
 			</div>
 			<div class="fR align-right">
-				<h3>sm: $4,999</h3>
-				<h3>m: $6,999</h3>
-				<h3>lg: $8,999</h3>
+				<h3>sm app wireframes: $4999</h3>
+				<h3>sm mobile app visual skins: $3999</h3>
+				<h3>logo: $1999</h3>
+				<h3>total: $10997</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
 			<p>PURPOSE</p>
 			<ul>
-				<li>Layout the flow of your app</li>
-				<li>Lay the UI/UX foundation</li>
+				<li>create company logo</li>
+				<li>take the app from idea to implementation through wireframes & information architecture</li>
+				<li>bring app to life with visual skins</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 last fL cf">
 			<p>DELIVERABLES</p>
 			<ul class="deliverables">
+				<li>solid, sexy logo</li>
+				<li>logo usage guidelines</li>
+				<li>ai file of logo</li>
 				<li>psd's of wireframes & tapflows</li>
+				<li>detailed documentation of UI functionality for every screen & view</li>
+				<li>psd's of each page fully designed out on a clean grid</li>
 			</ul>
 		</div>
 
-		<div class="banner span-4 last">
+		<div class="banner span-4 last" id="rush">
 			<div class="fL">
-				<h1>Visual Skins: Web-App</h1>
+				<h1>i need it now (rush orders)</h1>
 			</div>
 			<div class="fR align-right">
-				<h3 class="align-right">sm: $4,999</h3>
-				<h3 class="align-right">m: $6,999</h3>
-				<h3 class="align-right">lg: $8,999</h3>
+				<h3>25% fee assesed on bid total</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
 			<p>PURPOSE</p>
 			<ul>
-				<li>translate the brand to the web</li>
-				<li>bring the product to life in the wild wild web</li>
+				<li>You need to start yesterday</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 last fL cf">
 			<p>DELIVERABLES</p>
 			<ul class="deliverables">
-				<li>psd's of page skins</li>
-				<li>assets cut</li>
-				<li>documentation key for programmers</li>
+				<li>We will start your project in < 5 business days</li>
 			</ul>
 		</div>
 
-		<div class="banner span-4 last">
+		<div class="banner span-4 last" id="bid">
 			<div class="fL">
-				<h1>Visual Skins: Mobile-App*</h1>
-			</div>
-			<div class="fR">
-				<h3>$3,999</h3>
-			</div>
-		</div>
-		<div class="bullets span-2 fL cf">
-			<p>PURPOSE</p>
-			<ul>
-				<li>translate the brand to mobile device</li>
-				<li>bring the product to life in the #1 way in which the web is accessed today</li>
-			</ul>
-		</div>
-		<div class="bullets span-2 last fL cf">
-			<p>DELIVERABLES</p>
-			<ul class="deliverables">
-				<li>psd's of page skins</li>
-				<li>assets cut</li>
-				<li>documentation key for programmers</li>
-			</ul>
-		</div>
-
-		<div class="banner span-4 last">
-			<div class="fL">
-				<h1>Visual Skins: Tablet-App*</h1>
-			</div>
-			<div class="fR">
-				<h3>$3,999</h3>
-			</div>
-		</div>
-		<div class="bullets span-2 fL cf">
-			<p>PURPOSE</p>
-			<ul>
-				<li>translate the brand to the web</li>
-				<li>bring the product to life in the wild wild web</li>
-			</ul>
-		</div>
-		<div class="bullets span-2 last fL cf">
-			<p>DELIVERABLES</p>
-			<ul class="deliverables">
-				<li>psd's of page skins</li>
-				<li>assets cut</li>
-				<li>documentation key for programmers</li>
-			</ul>
-		</div>
-
-		<div class="banner span-4 last">
-			<div class="fL">
-				<h1>Notes</h1>
+				<h1>Get a Bid</h1>
 			</div>
 		</div>
 		<section class="description fL cf">
-			<p>30% downpayment to get started</p>
+			<p>You will find cheaper rates & more expensive rates out there for design. Things can be scattered across the board. We research constantly & base our pricing on a fair market evaluation of the service & quality we provide. We are confident in our skills & ability to create excellence for your product.</p>
+			<p><span class = "darkText">40%</span>downpayment to get started.</p>
 			<p>A legal contract stipulating our business relationship is signed at the beginning of each new project.</p>
-			<p>Buy one or more design element, and get a 50% discount on the lowest priced element.</p>
-			<p>*These prices are for the iOS versions only. To add Android versions add 50% to price line-item.</p>
-			<p>Each projects activates the talented fC team. Please email our <a href="mailto:sales@fleetcreature.com">Lead Coversions Department</a> if you'd like to discuss working with fleetCreature. Thank you for your interest in fleetCreature.</p>
+			<p>Buy one or more design element and get a <span class = "darkText">25% discount</span> on the lowest priced element.</p>
+			<p>Each projects activates the talented fC team. Please 	email our <a href="mailto:sales@fleetcreature.com">Lead Coversions Department</a> for a bid on your project. Thank you for your interest in fleetCreature!</p>
 		</section>
 	</div>
 </body>
