--- a/index.html
+++ b/index.html
@@ -1228,16 +1228,9 @@ overflow:hidden;
                     <div class="sample alyssa">
                     </div>
                     <p><span class="emphasis">Alyssa Reese</span></p>
-                    <p>Owner & Creative Director</p>
+                    <p>Founder & Creative Director</p>
                     <p><a href= "http://www.twitter.com/#!/aareese" target = "blank">@aaReese</a></p>
                     <p><a href = "http://www.linkedin.com/in/aareese" target = "blank">Linkedin</a></p>
-                </div>
-                <div class="other-interests span-1 cf">
-                    <div class="sample sarah">
-                    </div>
-                    <p><span class="emphasis">Sarah Wolfsont</span></p>
-                    <p>UI/UX Designer</p>
-                    <p><a href = "http://www.linkedin.com/in/sarahwolfsont" target = "blank">Linkedin</a></p>
                 </div>
                 <div class="other-interests span-1 cf">
                     <div class="sample jesse">
@@ -1251,9 +1244,15 @@ overflow:hidden;
                     <div class="sample melanie">
                     </div>
                     <p><span class="emphasis">Melanie Gower</span></p>
-                    <p>Content Strategist</p>
+                    <p>Brand Strategist & Designer</p>
                     <p><a href= "http://www.twitter.com/#!/GIRLvsCODE" target = "blank">@GIRLvsCODE</a></p>
                     <p><a href = "http://www.linkedin.com/in/melaniegower" target = "blank">Linkedin</a></p>
+                </div>
+                <div class="other-interests span-1 cf last">
+                    <div class="sample creature">
+                    </div>
+                    <p><span class="emphasis">Jelly Walrus</span></p>
+                    <p>Resident Creature of the Month</p>
                 </div>
             </div>
             <div class="banner span-4 last">
